--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- Projects -->
     <section id="projects">
       <div class="container">
-        <div class="row text-center mb-3">
+        <div class="row text-center mb-3 justify-content-center">
           <div class="col">
             <h2>My Projects</h2>
           </div>
@@ -152,7 +152,7 @@
             <h2>Contact Me</h2>
           </div>
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="row justify-content-center">
             <div class="col-md-6">
               <form>
