--- a/index.html
+++ b/index.html
@@ -155,20 +155,29 @@
         <div class="row justify-content-center">
           <div class="row justify-content-center">
             <div class="col-md-6">
-              <form>
+              <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+                <strong>Terimakasih,</strong> Pesan berhasil dikirimkan!
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+              <form name="submit-to-google-sheet">
                 <div class="mb-3">
                   <label for="Name" class="form-label">Nama Lengkap</label>
-                  <input type="text" class="form-control" id="Name" aria-describedby="Name" />
+                  <input type="text" class="form-control" id="Name" aria-describedby="Name" name="nama" />
 
                   <label for="email" class="form-label">Email </label>
-                  <input type="email" class="form-control" id="email" aria-describedby="email" />
+                  <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
                 </div>
                 <div class="mb-3">
                   <label for="pesan" class="form-label">Pesan</label>
-                  <textarea class="form-control" id="pesan" rows="3"></textarea>
+                  <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-success">Kirim</button>
+                <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+
+                <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                  Loading...
+                </button>
               </form>
             </div>
           </div>
@@ -190,5 +199,33 @@
     </footer>
     <!-- Akhir Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script>
+      const scriptURL = "https://script.google.com/macros/s/AKfycbwRQkFReadTxw9zcB4ImrOX1xkhAUCR3ae1ZmpCl-MhG8QPPFuI4kKvfDzBKyBh292Y/exec";
+      const form = document.forms["submit-to-google-sheet"];
+      const btnKirim = document.querySelector(".btn-kirim");
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        // ketika tombol submit di klik
+        // Tampilkan Tombol loading hilangkan tombol kirim
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            // Tampilkan Tombol Kirim hilangkan tombol loading
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
+            // Tampilkan alert
+            myAlert.classList.toggle("d-none");
+            // Reset formnya
+            form.reset();
+            console.log("Success!", response);
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
   </body>
 </html>
