--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#gallery">Gallery</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contacts">Contacts</a>
             </li>
           </ul>
@@ -149,6 +152,43 @@
     </section>
     <!-- Akhir Projects -->
 
+    <!-- Maps -->
+    <section id="maps">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Maps</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center fs-5 text-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d84716.04382083075!2d106.80443491959734!3d-6.186538426270441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5d2e764b12d%3A0x3d2ad6e1e0e9bcc8!2sNational%20Monument!5e0!3m2!1sen!2sid!4v1648006684865!5m2!1sen!2sid"
+              width="400"
+              height="300"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+          </div>
+        </div>
+        <div class="row justify-content-center fs-5 text-center">
+          
+           <p class="ganteng"></p> 
+          
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#e2edff"
+          fill-opacity="1"
+          d="M0,32L30,69.3C60,107,120,181,180,197.3C240,213,300,171,360,138.7C420,107,480,85,540,64C600,43,660,21,720,21.3C780,21,840,43,900,80C960,117,1020,171,1080,197.3C1140,224,1200,224,1260,234.7C1320,245,1380,267,1410,277.3L1440,288L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+
+    <!-- akhir maps -->
     <!-- Gallery -->
     <section id="gallery">
       <div class="container">
@@ -189,7 +229,7 @@
             </a>
           </div>
           <div class="col-md-3">
-            <a href="#">
+            <a href="#"> 
               <img src="img/gallery/7.jpg" alt="Gambar 7" class="img-fluid gallery-img" />
             </a>
           </div>
@@ -210,6 +250,13 @@
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,224L48,229.3C96,235,192,245,288,224C384,203,480,149,576,144C672,139,768,181,864,208C960,235,1056,245,1152,224C1248,203,1344,149,1392,122.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- akhir gallery -->
     <!-- Contact -->
@@ -263,7 +310,7 @@
 
     <!-- Footer -->
     <footer class="bg-primary text-white text-center pb-5">
-      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/frzkhy_/" class="text-white fw-bold">Fariz Ikhsan</a></p>
+      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a target="_blank" href="https://www.instagram.com/frzkhy_/" class="text-white fw-bold">Fariz Ikhsan</a></p>
     </footer>
     <!-- Akhir Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -293,6 +340,7 @@
       gsap.from(".jumbotron img", { duration: 1, rotateY: 360, opacity: 0 });
       gsap.from(".navbar", { duration: 1.5, y: "-100%", opacity: 0, ease: "bounce" });
       gsap.from(".display-4", { duration: 1, x: -50, opacity: 0, delay: 0.5, ease: "back" });
+      gsap.to(".ganteng", { duration: 2, delay: 1.5, text: "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error laboriosam, doloremque culpa reprehenderit libero nobis." });
     </script>
 
     <script>
