--- a/index.html
+++ b/index.html
@@ -100,40 +100,40 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="img/Projects/1.jpg" class="card-img-top" alt="Project 1" data-aos="flip-left" data-aos-duration="500" />
+              <div class="card" data-aos="fade-left" data-aos-duration="500">
+                <img src="img/Projects/1.jpg" class="card-img-top" alt="Project 1" />
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="img/Projects/2.jpg" class="card-img-top" alt="Project 2" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100" />
+              <div class="card" data-aos="fade-left" data-aos-duration="500" data-aos-delay="100">
+                <img src="img/Projects/2.jpg" class="card-img-top" alt="Project 2" />
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="img/Projects/3.jpg" class="card-img-top" alt="Project 3" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200" />
+              <div class="card" data-aos="fade-left" data-aos-duration="500" data-aos-delay="200">
+                <img src="img/Projects/3.jpg" class="card-img-top" alt="Project 3" />
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="img/Projects/4.jpg" class="card-img-top" alt="Project 4" data-aos="flip-left" data-aos-delay="300" data-aos-duration="500" />
+              <div class="card" data-aos="fade-left" data-aos-delay="300" data-aos-duration="500">
+                <img src="img/Projects/4.jpg" class="card-img-top" alt="Project 4" />
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="img/Projects/5.jpg" class="card-img-top" alt="Project 5" data-aos="flip-left" data-aos-delay="400" data-aos-duration="500" />
+              <div class="card" data-aos="fade-left" data-aos-delay="400" data-aos-duration="500">
+                <img src="img/Projects/5.jpg" class="card-img-top" alt="Project 5" />
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -152,43 +152,6 @@
     </section>
     <!-- Akhir Projects -->
 
-    <!-- Maps -->
-    <section id="maps">
-      <div class="container">
-        <div class="row text-center mb-3">
-          <div class="col">
-            <h2>Maps</h2>
-          </div>
-        </div>
-        <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4 justify-content-center" data-aos="fade-up" data-aos-duration="1000">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d84716.04382083075!2d106.80443491959734!3d-6.186538426270441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5d2e764b12d%3A0x3d2ad6e1e0e9bcc8!2sNational%20Monument!5e0!3m2!1sen!2sid!4v1648006684865!5m2!1sen!2sid"
-              width="300"
-              height="300"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-            ></iframe>
-          </div>
-        </div>
-        <div class="row justify-content-center fs-5 text-center">
-          
-           <p class="ganteng"></p> 
-          
-          </div>
-        </div>
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#e2edff"
-          fill-opacity="1"
-          d="M0,32L30,69.3C60,107,120,181,180,197.3C240,213,300,171,360,138.7C420,107,480,85,540,64C600,43,660,21,720,21.3C780,21,840,43,900,80C960,117,1020,171,1080,197.3C1140,224,1200,224,1260,234.7C1320,245,1380,267,1410,277.3L1440,288L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
-
-    <!-- akhir maps -->
     <!-- Gallery -->
     <section id="gallery">
       <div class="container">
@@ -229,7 +192,7 @@
             </a>
           </div>
           <div class="col-md-3">
-            <a href="#"> 
+            <a href="#">
               <img src="img/gallery/7.jpg" alt="Gambar 7" class="img-fluid gallery-img" />
             </a>
           </div>
