--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#home">Fariz Ikhsan</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,12 +33,18 @@
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#gallery">Gallery</a>
-            </li>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Projects </a>
+                  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                    <li><a class="dropdown-item" href="#projects">My Projects</a></li>
+                    <li><a class="dropdown-item" href="#my-Render">My Render</a></li>
+                    <li><a class="dropdown-item" href="#gallery">Gallery</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
             <li class="nav-item">
               <a class="nav-link" href="#contacts">Contacts</a>
             </li>
@@ -157,6 +163,7 @@
                 <a href="#" class="btn btn-light render-detail-button">Show Details</a>
               </div>
             </div>
+
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="render-box">
                 <h4 class="render-name">ZirafHD First Skin</h4>
@@ -283,7 +290,7 @@
                   <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+                <button type="submit" class="btn btn-success btn-kirim">Kirim</button>
 
                 <button class="btn btn-primary btn-loading d-none" type="button" disabled>
                   <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
@@ -296,7 +303,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#0d6efd"
+          fill="#212529"
           fill-opacity="1"
           d="M0,160L30,186.7C60,213,120,267,180,245.3C240,224,300,128,360,122.7C420,117,480,203,540,229.3C600,256,660,224,720,208C780,192,840,192,900,202.7C960,213,1020,235,1080,245.3C1140,256,1200,256,1260,245.3C1320,235,1380,213,1410,202.7L1440,192L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
         ></path>
@@ -305,7 +312,7 @@
     <!-- Akhir Contact -->
 
     <!-- Footer -->
-    <footer class="bg-primary text-white text-center pb-5">
+    <footer class="bg-dark text-white text-center pb-5">
       <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a target="_blank" href="https://www.instagram.com/frzkhy_/" class="text-white fw-bold">Fariz Ikhsan</a></p>
     </footer>
     <!-- Akhir Footer -->
@@ -370,9 +377,10 @@
     <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
     <script type="text/javascript">
       VanillaTilt.init(document.querySelectorAll(".render-box"), {
-        max: 35,
+        max: 20,
         speed: 400,
         glare: true,
+        gyroscope: true,
       });
     </script>
   </body>
